<resources>
    <string name="app_name">Schedule</string>
    <string name="title_lessons">Lessons</string>
    <string name="title_totals">Totals</string>
    <string name="title_learners">Learners</string>
    <string name="title_add_lesson">Add Lesson</string>
    <string name="title_add_learner">Add Learner</string>
    <string name="title_range_date">Range Date</string>
    <string name="title_activity_range_date">Range Date</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_finish_date">Finish Date</string>
    <string name="error_range_date">Finish Date less Start Date</string>
    <string name="title_activity_add_learner">Add Learner</string>
    <string name="hint_learner_name">Learner Name</string>
    <string name="hint_learner_pay">Learner Pay</string>
    <string name="error_learner_name">Empty Learner Name</string>
    <string name="error_learner_pay">Empty Learner Pay</string>
    <string name="title_activity_add_lesson">Add Lesson</string>
    <string name="hint_date_lesson">Start Date</string>
    <string name="hint_time_lesson">Start Time</string>
    <string name="title_repeat">Repeat</string>
    <string name="hint_end_date_repeat">Finish Date</string>
    <string name="title_choice_learner">Choice Learner</string>
    <string name="error_start_date">Error Start Date</string>
    <string name="error_start_time">Error Start Time</string>
    <string name="error_finish_date">Error Finish Date</string>
    <string name="title_activity_view_lesson">View Lesson</string>
    <string name="text_repeat">Repeat before %s</string>
    <string name="title_edit_lesson">Edit Lesson</string>
    <string name="title_delete_lesson">Delete Lesson</string>
    <string name="title_move_lesson">Move Lesson</string>
    <string name="title_activity_view_learner">View Learner</string>
    <string name="title_edit_learner">Edit Learner</string>
    <string name="title_activity_edit_learner">Edit Learner</string>
    <string name="hint_payment_lesson">Payment lesson</string>
    <string name="title_payment_lesson">Payment Lesson</string>
    <string name="title_activity_move_lesson">Move Lesson</string>
    <string name="title_current_lesson">Current Lesson</string>
    <string name="title_all_lessons">All Lessons</string>
    <string name="hint_learner_contact">Learner Contact</string>
    <string name="title_activity_day">Day</string>
    <string name="title_activity_edit_lesson">Edit Lesson</string>
    <string name="title_delete_learner">Delete Learner</string>
    <string name="message_delete_learner">Sure are delete learner?</string>
    <string name="message_delete_lesson">Sure are delete lesson?</string>
    <string name="title_call_learner">Call</string>
    <string name="title_button_export">Export</string>
    <string name="title_button_import">Import</string>
    <string name="title_settings">Settiings</string>
    <string name="text_backup_successful">Backup Successful!</string>
    <string name="text_backup_failed">Backup Failed!</string>
    <string name="text_restore_successful">Restore Successful!</string>
    <string name="text_restore_failed">Restore Failed!</string>
</resources>
