<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_lesson"
        android:icon="@drawable/ic_add_white_24px"
        android:title="@string/title_add_lesson"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_learner"
        android:icon="@drawable/ic_person_add_white_24px"
        android:title="@string/title_add_learner"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_range_date"
        android:icon="@drawable/ic_date_range_white_24px"
        android:title="@string/title_range_date"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/title_settings"
        app:showAsAction="never" />

</menu>